--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -1,7 +1,7 @@
 name: Update Swagger UI
 on:
-  schedule:
-    - cron:  '0 10 * * *'
+  # schedule:
+    # - cron:  '0 10 * * *'
   workflow_dispatch:
 
 jobs:
@@ -51,4 +51,4 @@ jobs:
             [1]: https://github.com/swagger-api/swagger-ui
             [2]: https://github.com/peter-evans/create-pull-request
           labels: dependencies, automated pr
-          branch: swagger-ui-updates
+#           branch: swagger-ui-updates
